# inference-samples

./: README.md
cdk/ec2/: .gitignore  README.md  cdk.context.json  package-lock.json
cdk/ec2/cpu/: README.md  cdk.json
cdk/ec2/gpu/: README.md  cdk.json  package-lock.json  (+1 more)
cdk/ecr/: README.md  cdk.json  package-lock.json  package.json
cdk/ecs/: README.md  cdk.json  package-lock.json  package.json
k8s/: README.md  create-cluster.sh  create-myimage-pod.sh  create-namespace.sh  create-nodegroup.sh  create-pod.sh  delete-myimage-pod.sh  delete-pod.sh  pt_inference.yaml  pt_myimage_inference.yaml
model-server/: .gitignore  build-and-run.sh  docker-bake.hcl  env.hcl  run-model-server.sh
model-server/app/: main.py
model-server/scripts/: build-and-run.sh  build.sh  curl.sh  prodcurl.sh  push.sh  run-model-server.sh
model-server/trace/: tracer.py
models/donut/: donut-inference-document-parsing-20230530-try-torch-neuronx-on-inf2.ipynb  donut-inference-document-parsing-20230530-try-torch-neuronx.ipynb  donut-inference-document-parsing.ipynb
sample/: .gitignore  Dockerfile  README.md  pyproject.toml
sample-apps/chat-model-server/: .gitignore  README.md  docker-bake.hcl  env.hcl.sample
sample-apps/gpu-server/: Dockerfile  README.md
sample-apps/multiarch-server/: Dockerfile  multi-arch-test.sh
sample-apps/web-server/: Dockerfile
sample/app/: config.yaml  main.py
sample/tests/: test_sample.py
web-server/: docker-bake.hcl  pyproject.toml
web-server/app/: main.py
web-server/scripts/: build-and-run.sh  logs.sh
web-server/tests/: test_web_server.py
(+65 files in other folders)
