[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "v1.11.0"
transformers = "^4.18.0"
fastapi = {extras = ["all"], version = "^0.77.1"}
fugashi = "^1.1.2"
ipadic = "^1.0.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyproject-flake8 = "^0.0.1-alpha.4"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 90
extend-ignore = "E203,"
max-complexity = 10